src/objects/Meeting_Participant_EVNT__c.object
<CustomObject>
    <description>Object to store Meeting Participants. Created 9/27/2013 by KLorenti.</description>
    <fields>
        <fullName>Account_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account from Event Participant. Created 9/28/2013 by KLorenti.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Event_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Estimate_EVNT_MVN__c</fullName>
        <description>Number of hours speaker is estimated for. Will be used to calculate against FMV. Created 10/1/2013 by KLorenti</description>
        <label>Hours Estimate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master-Detail Relationship from Meeting Participant to Meeting. Created 9/30/2013 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_EVNT__c</referenceTo>
        <relationshipLabel>Meeting Participants</relationshipLabel>
        <relationshipName>Meeting_Participants_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant_Type_EVNT_MVN__c</fullName>
        <description>Tracks type of Meeting Participant. Created 10/1/2013 by KLorenti</description>
        <label>Participant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slot_EVNT_MVN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for  Event Participants with a Meeting Slot
Created by John A Adams 9/27/2013</description>
        <label>Slot</label>
        <referenceTo>Slot_EVNT__c</referenceTo>
        <relationshipLabel>Meeting Participants</relationshipLabel>
        <relationshipName>Event_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_EVNT_MVN__c</fullName>
        <description>Status of Participant. Created 9/28/2013 by KLorenti</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onboarded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Meeting Participant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Meeting Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Participants</pluralLabel>
    <recordTypes>
        <fullName>Delegate</fullName>
        <active>true</active>
        <label>Delegate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker</fullName>
        <active>true</active>
        <label>Speaker</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>